# example-rust-gtk

./: .gitignore  Cargo.toml  README.md
src/: builder_basics.glade  buttons.glade  main.rs  window.glade
