[package]
name = "example-rust-gtk"
version = "0.1.0"
authors = ["John Wass <wassj@ctc.com>"]
edition = "2018"

[dependencies]
dbus = "0.9.0"
relm = "^0.19.0"
relm-derive = "^0.19.0"

[dependencies.gtk]
version = "^0.8.0"
features = ["v3_22"]

[dependencies.gio]
version = "^0.8.0"
features = ["v2_44"]

[dependencies.librpm]
# need https://github.com/rpm-software-management/librpm.rs/pull/14
git = "https://github.com/rpm-software-management/librpm.rs"
branch = "master"
